--- a/s/build
+++ b/s/build
@@ -1,3 +1,3 @@
 #! /bin/bash
 pandoc --template=GitHub.html5 data/index.md -o index.html --metadata title="Jonathan Fischoff's Personal Site"
-pandoc --template=GitHub.html5 data/blog/faster-database-testing.md -o blog/faster-database-testing.html --metadata title='Faster Testing with the New `tmp-postgres`'
+pandoc --template=GitHub.html5 data/blog/faster-database-testing.md -o blog/faster-database-testing.html --metadata title='Faster Database Testing with the New `tmp-postgres`'
