--- a/s/build
+++ b/s/build
@@ -4,3 +4,4 @@ pandoc --template=GitHub.html5 data/blog/faster-database-testing.md -o blog/fast
 pandoc --template=GitHub.html5 data/blog/development-notes-12-25-19.md -o blog/development-notes-12-25-19.html --metadata title='Development Notes: Decemember 25th 2019'
 pandoc --template=GitHub.html5 data/blog/development-notes-12-26-19.md -o blog/development-notes-12-26-19.html --metadata title='Development Notes: Decemember 26th 2019'
 pandoc --template=GitHub.html5 data/blog/development-notes-12-27-19.md -o blog/development-notes-12-27-19.html --metadata title='Development Notes: Decemember 27th 2019'
+pandoc --template=GitHub.html5 data/blog/keeping-database-tests-fast.md -o blog/keeping-database-tests-fast.html --metadata title='Keeping Database Tests Fast with `tmp-postgres`'
