--- a/s/build
+++ b/s/build
@@ -15,3 +15,5 @@ pandoc --template=GitHub.html5 data/blog/development-notes-01-03-20.md -o blog/d
 pandoc --template=GitHub.html5 data/blog/development-notes-01-04-20.md -o blog/development-notes-01-04-20.html --metadata title='Development Notes: January 4th 2020'
 pandoc --template=GitHub.html5 data/blog/development-notes-01-05-20.md -o blog/development-notes-01-05-20.html --metadata title='Development Notes: January 5th 2020'
 pandoc --template=GitHub.html5 data/blog/development-notes-01-06-20.md -o blog/development-notes-01-06-20.html --metadata title='Development Notes: January 6th 2020'
+pandoc --template=GitHub.html5 data/blog/development-notes-01-10-20.md -o blog/development-notes-01-10-20.html --metadata title='Development Notes: January 10th 2020'
+pandoc --template=GitHub.html5 data/blog/development-notes-01-11-20.md -o blog/development-notes-01-11-20.html --metadata title='Development Notes: January 11th 2020'
