--- a/s/build
+++ b/s/build
@@ -20,3 +20,4 @@ pandoc --template=GitHub.html5 data/blog/development-notes-01-11-20.md -o blog/d
 pandoc --template=GitHub.html5 data/blog/when-threadwaitread-doesnt.md -o blog/when-threadwaitread-doesnt.html --metadata title="When threadWaitRead Doesn't"
 pandoc --template=GitHub.html5 data/blog/the-eventmanager-and-non-blocking-io.md -o blog/the-eventmanager-and-non-blocking-io.html --metadata title="Non-blocking IO and the EventManager"
 pandoc --template=GitHub.html5 data/blog/bitmap-index-scan.md -o blog/bitmap-index-scan.html --metadata title="What to Think When You See a Bitmap Index Scan"
+pandoc --template=GitHub.html5 data/blog/introducing-hasql-queue.md -o blog/introducing-hasql-queue.html --metadata title="Introducing hasql-queue"
